# axum-ws

./: README.md  cliff.toml
axum-ws/: Cargo.toml
axum-ws/examples/: into_response.rs
axum-ws/src/: assigns.rs  channel.rs  event.rs  lib.rs  message.rs  payload.rs  socket.rs  topic.rs  user_id.rs  websocket.rs  websocket_error.rs  websocket_state.rs
axum-ws/src/handle/: mod.rs  response.rs
axum-ws/src/handler/: into_response.rs  mod.rs  response.rs
examples/chat/: .gitignore
examples/chat/assets/js/: user_socket.js
examples/chat/src/: main.rs
examples/chat/templates/: index.html
