[package]
name = "axum-ws"
version = "0.1.0"
authors = ["Jeff <fei.code@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["ws"] }
dashmap = "6.0.1"
derive_builder = "0.20.0"
futures = "0.3.30"
lazy_static = "1.5.0"
nanoid = "0.4.0"
serde = "1.0.203"
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
